operator/pkg/gateway-api/testdata/gateway/httproute-request-percentage-mirror/input/httproute-request-percentage-mirror.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: request-percentage-mirror
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /percent-mirror
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: infra-backend-v2
          namespace: gateway-conformance-infra
          port: 8080
        percent: 20
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      namespace: gateway-conformance-infra
  - matches:
    - path:
        type: PathPrefix
        value: /percent-mirror-fraction
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: infra-backend-v2
          namespace: gateway-conformance-infra
          port: 8080
        fraction:
          numerator: 25
          denominator: 50
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      namespace: gateway-conformance-infra
  - matches:
    - path:
        type: PathPrefix
        value: /percent-mirror-and-modify-headers
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Header-Set
          value: set-overwrites-values
        add:
        - name: X-Header-Add
          value: header-val-1
        - name: X-Header-Add-Append
          value: header-val-2
        remove:
        - X-Header-Remove
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: infra-backend-v2
          namespace: gateway-conformance-infra
          port: 8080
        percent: 35
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      namespace: gateway-conformance-infra
